--- a/.github/workflows/commit-handling.yml
+++ b/.github/workflows/commit-handling.yml
@@ -17,3 +17,5 @@ jobs:
       - name: Display Commit Message
         run: |
           echo "Commit Message: ${{ env.UPDATE_DESCRIPTION }}"
+          echo "Simulating syntax error"
+          eval "echo ${UPDATE_DESCRIPTION}"
