--- a/.github/workflows/commit-handling.yml
+++ b/.github/workflows/commit-handling.yml
@@ -1,4 +1,4 @@
-name: Commit Handling
+name: handle-special-characters
 
 on:
   push:
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set Env Var from Commit Message
         run: |
-          update_description=$(printf '%s\n' "${{ github.event.head_commit.message }}" | head -1)
+          update_description=$(printf '%q' "${{ github.event.head_commit.message }}" | head -1)
           echo "UPDATE_DESCRIPTION=${update_description}" >> $GITHUB_ENV
-      - name: Display Commit Message
+      - name: Simulate No Syntax Error
         run: |
           echo "Commit Message: ${{ env.UPDATE_DESCRIPTION }}"
-          echo "Simulating syntax error"
+          echo "Simulating no syntax error"
           eval "echo ${UPDATE_DESCRIPTION}"
