--- a/.github/workflows/commit-handling.yml
+++ b/.github/workflows/commit-handling.yml
@@ -12,8 +12,17 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set Env Var from Commit Message
         run: |
-          update_description=$(echo "${{ github.event.head_commit.message }}" | jq -sRr @sh)
-          echo "UPDATE_DESCRIPTION=${update_description}" >> $GITHUB_ENV
+
+          printf -v safe_description "UPDATE_DESCRIPTION=%s" "${{ github.event.head_commit.message }}"
+          echo $safe_description | head -1 >> $GITHUB_ENV
+
+
+      - name: Decode and Use Description
+        run: |
+          # Assuming UPDATE_DESCRIPTION in $GITHUB_ENV contains the base64 encoded message
+          decoded_message=$(echo "$UPDATE_DESCRIPTION" | base64 --decode)
+          echo "Decoded Message: $decoded_message"
+      
       - name: Display Commit Message
         run: |
           echo "Commit Message: ${{ env.UPDATE_DESCRIPTION }}"
@@ -21,3 +30,5 @@ jobs:
         run: |
           echo "Simulating no syntax error"
           eval "echo ${UPDATE_DESCRIPTION}"
+          eval "echo ${decoded_message}"
+          eval "echo ${safe_description}"
